--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -18,11 +18,12 @@ In paleoecological analysis the use of squared chord dissimilarity (Overpeck, 19
 
 A limitation of the use of dissimilarity from modern is that the dissimilarity of past pollen assemblages with respect to modern pollen cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low $d_{mt}$ value, provided near analogues exist in the modern pollen data.  To correct for this, we can examine measures of turnover with a single pollen record through time $d_{st}$, or site dissimilarity at time $t$.  This measures dissimilarity from one sample in a pollen record to the next, more modern sample, with high values for $d_{t}$ indicating much higher rates of vegetation turnover within cores.  Schuman et al. (ref) showed patterns of high within-core turnover, but there is a further element of turnover or change that has not been explored.  Ladnscape turnover $d_{lt}$ represents the novelty of a community on the observable landscape at some timepoint $t$.  This landscape turnover estimate allows us to capture the movement of communities or broadly based vegetation types across the landscape.  We can imagine times in the past where site turnover may be high, but landscape turnover may be low, for example, the movement of boreal type ecosystems across North America following deglaciation may result in high site turnover, but low landscape turnover.
 
-We can then imagine a set of scenarios, illustrated by plotting the various combinations of 
+We can then imagine a set of scenarios, illustrated by plotting the various combinations of landscape and site level similarities.
 
 ```{r fig.width=6, message=FALSE, echo=FALSE, warning=FALSE}
 
 library(ggplot2)
+library(MASS)
 
 data <- data.frame(x = rgamma(1000, shape = 1.5, rate = 1.5))
 
@@ -53,7 +54,7 @@ ggplot(data, aes(x = x, y = y)) +
 
 ```
 
-**Figure X.**  *Models for understanding turnover and dissimilarity in the pollen record.  Community stability is represented by sites with low turnover relative to past assemblages at the site, and across the landscape.  Community migration occurs when a site is highly siddimilar to past assemblages at the site, but has close analogues in the past landscape.  Transient refugia occur when a site has low turnover, but becomes highly dissimilar from the past landscape.  Ecological novelty occurs when a site is dissimilar from both the landscape and its own past assemblages.*
+**Figure 1.**  *Models for understanding turnover and dissimilarity in the pollen record.  Community stability is represented by sites with low turnover relative to past assemblages at the site, and across the landscape.  Community migration occurs when a site is highly siddimilar to past assemblages at the site, but has close analogues in the past landscape.  Transient refugia occur when a site has low turnover, but becomes highly dissimilar from the past landscape.  Ecological novelty occurs when a site is dissimilar from both the landscape and its own past assemblages.*
 
 In the same way we can examine vegetation dissimilarity we can make use of transient climate models to use the same measures of dissimilarity for climate, here $c_{m}$ (dissimilarity from modern), $c_{s}$ (change at a site) and $c_{l}$ (change relative to landscape).
 
@@ -73,7 +74,7 @@ To assist in this endevour, we examine pollen records from the Neotoma Database,
 
 ![Alt text](/HandMadeFigures/ConceptualPlot.png)
 
-**Figure 1**. *Turnover estimates for time t_i are measured as the minimum within site dissimilarity from the prior timestep (d_si) or the minimum dissimilarity from the landscape of pollen assemblages at the earlier timestep (d_li).  In all cases the earlier timestep is defined as a time preiod between 250 and 750 years prior to the sample of interest.  These two values then form a continuum of possibilities.  High ds and low dl indicate disturbance events within a stable, heterogeneous landscape, high dl & high ds indicate broad-scale, rapid landscape turnover, high dl, low ds is relatively infrequent, but may indicate local refugia within a shifting landscape*
+**Figure 2**. *Turnover estimates for time t_i are measured as the minimum within site dissimilarity from the prior timestep (d_si) or the minimum dissimilarity from the landscape of pollen assemblages at the earlier timestep (d_li).  In all cases the earlier timestep is defined as a time preiod between 250 and 750 years prior to the sample of interest.  These two values then form a continuum of possibilities.  High ds and low dl indicate disturbance events within a stable, heterogeneous landscape, high dl & high ds indicate broad-scale, rapid landscape turnover, high dl, low ds is relatively infrequent, but may indicate local refugia within a shifting landscape*
 
 We expect that ecosystems will show patterns of change that can be explained through the multivariate use of these dissimilarity measures.  For example, rapid species migration during the late-Pleistocene/eraly-Holocene transition should be apparent as high local turnover partnered with relatively low landscape change if entire communities are migrating northward.  Strongly individualistic species responses would be visible as paired high site and landscape turnovers.  Modern successional changes should be visible as sets of high self, low landscape changes.  Low landscape and low self changes should be static ecosystems.
 
@@ -161,61 +162,49 @@ clim.plot <- dcast(climate.frame,
                     fun.aggregate = function(x)mean(x, na.rm=TRUE))
 
 colnames(cross.plot)[4:5] <- c('self', 'land')
-colnames(clim.plot)[4:5] <- c('self', 'land');
+colnames(clim.plot)[4:5] <- c('self', 'land')
 
 full.plot <- data.frame(rbind(cross.plot, clim.plot),
-                        value = c(rep('pollen', nrow(cross.plot)),
-                                  rep('climate', nrow(clim.plot))))
+                        value = factor(c(rep('Pollen', nrow(cross.plot)),
+                                  rep('Climate', nrow(clim.plot))),
+                                  levels = c('Pollen', 'Climate')))
 
-corp.est <- cor.test(cross.plot$self, cross.plot$land, use = 'pairwise.complete.obs', method='spearman')
-corc.est <- cor.test(clim.plot$self, clim.plot$land, use = 'pairwise.complete.obs', method='spearman')
+full.plot <- subset(full.plot, direction == 'past')
 
-ggplot(full.plot, aes(y = land, x = self)) + 
-  geom_point(alpha = 0.05) + 
-  geom_density2d(color = 'lightgray') +
-  scale_x_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
-  scale_y_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
+source('R/ChangingClasses.R')
+
+ggplot(full.data, aes(y = land, x = self, color = quad)) + 
+  geom_point(alpha = 0.6) +
+  scale_x_sqrt(expand=c(0,0))+#, limits = c(0.01, 1)) + 
+  scale_y_sqrt(expand=c(0,0))+#, limits = c(0.01, 1)) + 
   geom_abline() + 
   coord_fixed(ratio=1) +
   ylab('Landscape Dissimilarity') +
   xlab('Site Turnover') +
   theme_bw() +
   theme(axis.text = element_text(size = 12, family = 'serif'),
-        axis.title = element_text(size = 18, family = 'serif', face = 'bold')) +
-  facet_wrap(~value, scales='free')
+        axis.title = element_text(size = 18, family = 'serif', face = 'bold'),
+        strip.text = element_text(size = 18, family = 'serif', face = 'bold')) +
+  facet_wrap(~value, scale = 'free')
 
-#  Does it matter if we look into the past or the future?
-effectofdir<-anova(lm(land~self*direction, data = cross.plot), 
-                   lm(land~self, data = cross.plot), test='F')
-
-#  This is cool though, the difference between moving forward in time at the site
-#  level, vs moving forward at the landscape level.  There is much higer correlation
-#  within the self.
-cross.self <- dcast(cross.plot, site + age ~ direction, value.var = 'self', fun.aggregate=sum)
-cross.land <- dcast(cross.plot, site + age ~ direction, value.var = 'land', fun.aggregate=sum)
+pol.mod <- lm(self ~ land, 
+               data = na.omit(subset(full.plot, value == 'Pollen')))
+clim.mod <- lm(self ~ land, 
+                data = na.omit(subset(full.plot, value == 'Climate')))
 
 ```
 
-**Figure X**. *Turnover and dissimilarity for individual sites from the Neotoma database for both climate and vegetation, showing a relationship between the two variables, but also considerable noise.  There is no significant difference in the relationship when dissimilarities are calculated in the past or the future.  In particular it appears evident that site-level turnover is more closely related to landscape level turnover in the pollen data, wheras there is less of a relationship in the climate data.*
+**Figure X**. *Turnover and dissimilarity for individual sites from the Neotoma database for both climate and vegetation, showing a relationship between the two variables, but also considerable noise.*
 
-Turnover within the core is correlated to landscape dissimilarity ($r_{s}$ = `r p(corp.est$estimate)`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  There is no significant difference between this relationship for past dissimilarities and future dissimilarities ($F_{2}$=`r p(effectofdir$F[2])`, p = `r p(effectofdir$'Pr(>F)'[2])`).  The same plot, for climate in this case, shows 
+Turnover within the core (change within the core from one time period to another) is correlated to landscape dissimilarity ($r_{s}$ = `r p(pol.mod$coefficients[2])`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  The same plot, for climate in this case, shows a similar pattern ($r_{s}$ = `r p(clim.mod$coefficients[2])`, p < 0.001), although the scale of dissimilarity values is much higher for the climate data due to the difference in base units for the two measures (percentages vs. scaled climate values).  The central region of dissimilarity is generally shifted toward the regions we identify as 'Persistence', indicating that throughout the late-Glacial and Holocene (in particular) low turnover at both the site and landscape level was the rule.
 
-```{r}
-ggplot(full.plot, aes(y = land, x = self)) + 
-  geom_point(alpha = 0.05) + 
-  geom_density2d(color = 'lightgray') +
-  scale_x_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
-  scale_y_log10(expand=c(0,0))+#, limits = c(0.01, 1)) + 
-  geom_abline() + 
-  coord_fixed(ratio=1) +
-  ylab('Landscape Dissimilarity') +
-  xlab('Site Turnover') +
-  theme_bw() +
-  theme(axis.text = element_text(size = 12, family = 'serif'),
-        axis.title = element_text(size = 18, family = 'serif', face = 'bold')) +
-  facet_wrap(~value, scales='free')
+```{r TurnoverClassesInTime, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 10, fig.height=9}
+ 
+grid.arrange(pol.data[[2]], clim.data[[2]], ncol=1)
 
 ```
+**Figure X**. *Proportion of sites within each time window showing turnover rates representing novelty, mighration, persistence or refugium.*
+
 
 ```{r dissVsAge, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 10, fig.height=9}
 
@@ -326,22 +315,22 @@ inclusion <- full.frame$age < 15000 &
              full.frame$min > 0
 
 full.frame$byVal <- factor(paste(full.frame$self, full.frame$variable))
-
-model0 <- gam(log(min,10) ~ 1, family = gaussian, 
-              data = full.frame[inclusion, ])
-
-model1 <- gam(log(min,10) ~ s(age, by = byVal), family = gaussian, 
-              data = full.frame[inclusion, ])
-
-model1.500 <- gam(log(min,10) ~ s(age, k = 40), family = gaussian, 
-                  data = full.frame[inclusion, ])
-
-model2.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(domain)), family = gaussian, 
-                  data = full.frame[inclusion, ])
-
-model3.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(division)), 
-                  family = gaussian, 
-                  data = full.frame[inclusion, ])
+# 
+# model0 <- gam(log(min,10) ~ 1, family = gaussian, 
+#               data = full.frame[inclusion, ])
+# 
+# model1 <- gam(log(min,10) ~ s(age, by = byVal), family = gaussian, 
+#               data = full.frame[inclusion, ])
+# 
+# model1.500 <- gam(log(min,10) ~ s(age, k = 40), family = gaussian, 
+#                   data = full.frame[inclusion, ])
+# 
+# model2.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(domain)), family = gaussian, 
+#                   data = full.frame[inclusion, ])
+# 
+# model3.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(division)), 
+#                   family = gaussian, 
+#                   data = full.frame[inclusion, ])
 
 ```
 
