--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -150,7 +150,7 @@ Of the `r length(unique(compiled.pollen$sitename))` pollen sites obtained from N
 
 ### Self and Landscape Dissimilarity:
 
-```{r test, warning= FALSE, echo=FALSE, message=FALSE, fig.height=5, fig.width=5}
+```{r test, warning= FALSE, echo=FALSE, message=FALSE, fig.height=5, fig.width=7}
 
 cross.plot <- dcast(pollen.frame, 
                     list(.(site, age, direction), .(self)),
@@ -192,6 +192,8 @@ pol.mod <- lm(self ~ land,
 clim.mod <- lm(self ~ land, 
                 data = na.omit(subset(full.plot, value == 'Climate')))
 
+save('data/output/pollen.site.table.csv')
+
 ```
 
 **Figure X**. *Turnover and dissimilarity for individual sites from the Neotoma database for both climate and vegetation, showing a relationship between the two variables, but also considerable noise.*
@@ -199,140 +201,28 @@ clim.mod <- lm(self ~ land,
 Turnover within the core (change within the core from one time period to another) is correlated to landscape dissimilarity ($r_{s}$ = `r p(pol.mod$coefficients[2])`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  The same plot, for climate in this case, shows a similar pattern ($r_{s}$ = `r p(clim.mod$coefficients[2])`, p < 0.001), although the scale of dissimilarity values is much higher for the climate data due to the difference in base units for the two measures (percentages vs. scaled climate values).  The central region of dissimilarity is generally shifted toward the regions we identify as 'Persistence', indicating that throughout the late-Glacial and Holocene (in particular) low turnover at both the site and landscape level was the rule.
 
 ```{r TurnoverClassesInTime, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 10, fig.height=9}
- 
+
 grid.arrange(pol.data[[2]], clim.data[[2]], ncol=1)
+
+pol.pct <- pol.data[[1]][,-1] / rowSums(pol.data[[1]][,-1])
+clm.pct <- clim.data[[1]][,-1] / rowSums(clim.data[[1]][,-1])
 
 ```
 **Figure X**. *Proportion of sites within each time window showing turnover rates representing novelty, mighration, persistence or refugium.*
 
+When we examine the relative proportions of sites that appear to show migration, novelty, persistence and refugium we see that both climate and vegetation turnover are fairly well correlated ($r_{mantel}$ =  `r p(mantel(dist(pol.pct), dist(clm.pct))$statistic)`, p = 0.001), but differences between the records are clear (Figure X).  
 
-```{r dissVsAge, message=FALSE, warning=FALSE, echo=FALSE, fig.width = 10, fig.height=9}
+Constrained clustering (using `chclust` in `rioja`) shows five main groupings the pollen and climate data, however, cut points differ between the two.  The earliest Pollen Zone, P1, occurs only from 14500 - 15000 cal. yr BP, where Novelty represents the dominant class, with a smaller component of Migration and few sites with Mid-Quantile turnover levels.  Pollen zone P2 extends from 12100 - 14400 cal yr BP, with Novelty again dominant, but declining as the Mid-Quantile class increases, indicating progressively lower landscape and site level changes. Increases in the Refugium class may occur as site level change slows in more southern regions relative to higher landscape level turnover across the domain.
 
-library(mgcv)
+Pollen Zone 3, from 9700 - 12000 continues the pattern of overall declining turnover rates, as evidenced by the increase in Mid-Quantile points.  At this point the Refugium class reaches its maximum (20% of all records) and the Persistence class, sites with very low landscape and site level turnover begin to appear in the record.  This is evidence for a slowing of ecological reorganization across eastern North America, supported by other paleoecological studies.
 
-compiled.to.indiv <- match(pollen.frame$site, indiv.sites$site)
-compiled.to.compiled <- match(pollen.frame$site, compiled.pollen$sitename)
+Pollen Zone 4 (P4) shows relative stability.  The Mid-Quantile records account for, on average 65% of all records.  A short peak in Novelty occurs at ca. 5000 cal yr BP and persists for approximately 500 years.  Many studies have proposed the formation of modern ecosystems in North America occured approximately 6000 cal yr BP.  At this point most major climate systems were in place following the collapse of the Laurentide Ice Sheet ca. 8.2 cal kyr, and migration had largely slowed (Ordonez?).  Pollen Zone 4 terminates approximately 200 cal. years BP, with a rapid increase in Novelty.
 
-clim.in.pol <- pollen.frame$uniqueID[pollen.frame$uniqueID %in% climate.frame$uniqueID]
+Pollen Zone 5 represents the post-EuroAmerican Settlement era.  Here we see a rapid rise in Novelty as communities re-organize, and as disturbance-related taxa such as Ambrosia are released.  This rapid increase in Novelty is not seen in studies such as Shuman since the baseline for these studies is the modern era, and as such they are unable to capture the rapid increase in Novelty.  It is shocking to see that the increase in Novelty (to 50% in the last time bin) is at last as high as turnover following deglaciation 12000 - 14000 cal yr. BP, during the 'Non-Analogue' era in the southern Great Lakes Region (sensu Gill et al.).  This indicates that the extent of anthropogenic change in modern ecological communities in North America is much higher than we might have expected, and, given the length of time over which communities continued to re-organize following rapid climate turnover in the paleo record, this re-organization may persist for much longer than anticipated.
 
-full.frame <- data.frame(rbind(pollen.frame[clim.in.pol,], climate.frame[clim.in.pol,]),
-                           lat = rep(compiled.pollen$lat[compiled.to.indiv], 2),
-                           long = rep(compiled.pollen$long[compiled.to.indiv], 2),
-                           age.model = rep(compiled.pollen$date.type[compiled.to.compiled], 2),
-                           domain = rep(indiv.sites$domain[compiled.to.indiv], 2),
-                           division = rep(indiv.sites$division[compiled.to.indiv], 2),
-                           province = rep(indiv.sites$province[compiled.to.indiv], 2),
-                           was.na = FALSE,
-                           variable = rep(c('pollen', 'climate'), each = nrow(pollen.frame)),
-                           stringsAsFactors = FALSE)
+Climate data can be divided into five zones as well.  These zones do not correspond well to the pollen data, in part due to higher variability for some of the dissimilarity classes (Fig X), but also because of different overall patterns, in particular, patterns of Novelty.  Zone C1 (15000 - 13600 cal yr BP) maintains high Novelty values, but ends rapidly as Novelty declines and then recovers during Zone C2 (13500 - 12800 cal yr BP).  Zone C2 is a short lived period with highly variable Novelty and Mid-Quantile values, as well as higher values for the Migration class, indicating climate was changing systematically in places across the region, perhaps in response to regional scale warming.  Zone C3 (12800 - 11300 cal yr BP) shows another decline in Novelty, largely in response to a rapid increase in Mid-Quantile values, indicating a stabilization of regional climate change over that period.  A spike in Novelty at the end of Zone C3 is associated with a decline in Migration, Mid-Quantile and Refugium classes, likely associated with rapid Younger Dryas cooling.
 
-full.frame <- full.frame[!(is.na(full.frame$min) | full.frame$min == 0),]
-
-#  A number of sites have either Lake assignments (they are in the Great Lakes) or 
-#  NA assignments (they are on the coastline, and don't fall within the ecozone
-#  shapefile).  This re-assigns values for these points.
-#  This also removes the "Humid Tropical" ecozone because these samples only span the
-#  last 4500 years.  Not a long enough record.
-
-source('R/data_cleaning.R')
-
-#  The Humid Temperate Domain
-
-for(i in 1:1500){
-  #  This loop pulls out the 95% CI samples within 500 year time steps at 10 year intervals.
-  #  This means that if a sample is outside the 95% ci for the 500 years within any 10 year
-  #  timestep that covers the 500 year period it will be marked.
-  clim.cut <- age.class & full.frame$variable=='climate'
-  pol.cut  <- age.class & full.frame$variable=='pollen'
-  
-  age.class <- full.frame$age %in% (i*10):((i*10)+500)
-  clim.quant <- quantile(full.frame$min[clim.cut], 
-                         probs=0.90, na.rm=TRUE)
-  pol.quant <- quantile(full.frame$min[pol.cut],
-                         probs=0.90, na.rm=TRUE)
-  
-  full.frame$nf[clim.cut & full.frame$min > clim.quant] <- 'red'
-  full.frame$nf[pol.cut & full.frame$min > pol.quant] <- 'red'
-}
-
-what <- full.frame$domain %in% c('HUMID TEMPERATE DOMAIN') &
-  !full.frame$age.model %in% c('Radiocarbon years BP')
-
-full.frame$self <- factor(full.frame$self, 
-                          levels = c(TRUE, FALSE), 
-                          labels= c('Turnover', 'Landscape Change'))
-
-curve <- ggplot(aes(x = age, y = min), data = full.frame[what,]) + 
-  geom_point(aes(color = nf)) +
-  #scale_color_identity() +
-  #geom_smooth(formula = y ~ s(x, k = 40), method='gam', family = Gamma, size = 2) +
-  #geom_smooth(formula = y ~ s(x, k = 40), 
-  #            method='gam', family = Gamma, size = 1, color = 'black', linetype = 2) +
-  scale_x_continuous(limits = c(0, 15000), expand=c(0,0)) +
-  scale_y_sqrt(expand=c(0,0)) +
-  theme_bw() + 
-  theme(axis.title = element_text(family='serif', face='italic', size=20),
-        axis.text = element_text(family='serif', size=16),
-        legend.position = 'none') +
-  xlab('Radiocarbon Years Before Present') +
-  ylab('Landscape Dissimilarity') +
-  facet_wrap(~variable + self, ncol = 2, scale='free')
-
-points <- ggplot(data = data.frame(map), aes(long, lat)) + 
-  geom_path(aes(group=group), color='black') +
-  geom_point(data = pollen.frame[pollen.frame$min > quantile(pollen.frame$min, 0.95, na.rm=TRUE) & what, ], 
-             aes(x = long, y = lat, size = min*10), alpha=0.2, color = 'red') +
-  scale_size_identity() +
-  coord_map(xlim=c(-100, -59), ylim=c(21, 50)) + theme_bw()
-
-curve
-
-```
-
-**Figure 3**. *Turnover through time in the Neotoma database.*
-
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
-
-cross.plot <- dcast(full.frame[full.frame$direction == 'past',],
-                    list(.(site, age, self), .(variable)),
-                    value.var = 'min', 
-                    fun.aggregate = function(x)mean(x, na.rm=TRUE))
-
-ggplot(cross.plot, aes(x = climate, y = pollen, color = self)) + 
-  geom_point(alpha=0.1) +
-  stat_density2d() + scale_x_sqrt() + scale_y_sqrt() +
-  theme_bw()
-
-```
-
-**Figure X.** *Relationship between landscape and self turnover appears to show little relationship between climate and vegetation turnover.*
-
-```{r SignifModels, echo=FALSE, warning=FALSE, error=FALSE}
-
-#  This is some basic hypothesis testing.  We're interested in knowing how much these change.
-inclusion <- full.frame$age < 15000 & 
-             full.frame$age > -50 &
-             full.frame$min > 0
-
-full.frame$byVal <- factor(paste(full.frame$self, full.frame$variable))
-# 
-# model0 <- gam(log(min,10) ~ 1, family = gaussian, 
-#               data = full.frame[inclusion, ])
-# 
-# model1 <- gam(log(min,10) ~ s(age, by = byVal), family = gaussian, 
-#               data = full.frame[inclusion, ])
-# 
-# model1.500 <- gam(log(min,10) ~ s(age, k = 40), family = gaussian, 
-#                   data = full.frame[inclusion, ])
-# 
-# model2.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(domain)), family = gaussian, 
-#                   data = full.frame[inclusion, ])
-# 
-# model3.500 <- gam(log(min,10) ~ s(age, k = 40, by = factor(division)), 
-#                   family = gaussian, 
-#                   data = full.frame[inclusion, ])
-
-```
+Zone C4 (11300 - 6000 cal yr BP) is the first zone where Persistence becomes a feature of the dissimilarity space, indicating broader regions where climate changes little over time are appearing on the landscape.  At the same time Novelty has declined rapidly, and continues to decline to 6000 cal yr BP, while the Refugium class increases initially, and then remains relatively stable until the present, although values remain low, between 8 - 10%.  The final zone (Zone C5) continues the pattern of C4, maintaining relative stability for each of the turnover classes.  Migration classes hit short lived maxima at 1800 and 2700 cal yr BP.  The high for Migration at 1800 cal yr BP is also a high for Refugium and a local maxima for Novelty, indicating the potential for a regional-scale climatic event at this time.
 
 Discussion
 ---------------------------
